# multiagents-argo-lab

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
app/data/: customers_data.csv  order_details_data.csv  orders_data.csv  products_data.csv
app/db/: shop.db
app/scripts/: database copy.py  init_data.sql  schema.sql
data/: Orders.csv  Orders.xlsx  Stock.csv  Stock.xlsx  employees.csv  inventory copy.db
notebooks/: Level_0_agent_with_providers.ipynb  Level_1_agent_with_memory.ipynb  Level_1_agent_with_sqltool_openai.ipynb  Level_1_agent_with_sqltool_v2.ipynb  Level_1_agent_with_tools_csv.ipynb  Level_1_agent_with_tools_search.ipynb  Level_2_agent_with_knowledge.ipynb  Level_2_agent_with_knowledge_lancedb_pdf.ipynb  Level_2_agent_with_knowledge_pdf_hg_lance.ipynb  Level_2_agent_with_knowledge_pdf_ollama_lance.ipynb  Level_3_teams_agents.ipynb  Level_3_teams_agents_csv_websearch.ipynb  Level_3_teams_agents_rag_websearch.ipynb  Level_3_workflows.ipynb  agent_with_tools_database.ipynb  agent_with_tools_search.ipynb  first_agent_with_providers.ipynb  text2sql_agent_ollama_llama32_3b.ipynb  text2sql_agent_ollama_qwen2.5_coder_7b.ipynb
notebooks/data/chromadb/: chroma.sqlite3
src/lab/: agents.py  database.py  prompt.py
src/lab/db/: database.py  models.py  repository.py
src/lab/utils/: logger.py
src/multiagents/: agent.py  config.py  prompt.py  video_agent.py
src/multiagents/db/: database.py  models.py
src/multiagents/db/repositories/: customer.py  order.py  orderdetail.py  product.py
src/multiagents/utils/: logger.py
tests/: dataset_queries_en.json  df_benchmark_results_llama-32-3B.csv  df_benchmark_results_qwen2.5-coder.csv
